# mcp-aws-solution-architect

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPERATIONS.md  README.md  SETUP.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  frontend.yml  security.yml  vercel.yml
docs/: architecture.md  getting-started.md  index.md  roadmap.md
docs/adr/: 0001-record-architecture-decisions.md  0002-use-mcp-python-sdk.md  0003-bedrock-is-optional.md
docs/tools/: estimate-cost.md  generate-adr.md  generate-architecture-diagram.md  review-well-architected.md  suggest-services.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Architecture.tsx  Features.tsx  Footer.tsx  Hero.tsx  Quickstart.tsx  Tools.tsx
frontend/public/: index.html  robots.txt  sitemap.xml  styles.css
frontend/scripts/: build.mjs  lint.mjs
src/mcp_aws_sa/: __init__.py  models.py  server.py
src/mcp_aws_sa/data/: __init__.py  patterns.py  pricing.py  service_catalog.py
src/mcp_aws_sa/tools/: __init__.py  adr.py  architecture.py  cost.py  services.py  well_architected.py
tests/: test_adr.py  test_architecture.py  test_cost.py  test_server.py  test_services.py  test_well_architected.py
