[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-aws-solution-architect"
version = "0.1.0"
description = "MCP server exposing AWS Solution Architect tools (services, diagrams, cost, Well-Architected, ADR)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fernando Francisco Azevedo", email = "fernando@moretes.com" }]
keywords = ["mcp", "aws", "solution-architecture", "well-architected", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]
bedrock = [
    "boto3>=1.34",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
]

[project.urls]
Homepage = "https://github.com/fernandofatech/mcp-aws-solution-architect"
Documentation = "https://fernandofatech.github.io/mcp-aws-solution-architect/"
Repository = "https://github.com/fernandofatech/mcp-aws-solution-architect"
Issues = "https://github.com/fernandofatech/mcp-aws-solution-architect/issues"

[project.scripts]
mcp-aws-sa = "mcp_aws_sa.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_aws_sa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET", "ARG"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src/mcp_aws_sa --cov-report=term-missing"
asyncio_mode = "auto"
